@@ -220,6 +220,7 @@ AC_SUBST(REBUILD)
 AC_OUTPUT([
 Makefile
 gconf.spec
+gconf.m4
 gconf/Makefile
 gconf/default.path
 gconf/gconfd.server
