@@ -86,8 +86,10 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-, root, root)
 %doc AUTHORS COPYING ChangeLog NEWS README
-%config %{sysconfdir}/gconf/1/*.example
+%config %{sysconfdir}/gconf/1/path
 %config %{sysconfdir}/gconf/schemas/*.schemas
+%dir	%{sysconfdir}/gconf/gconf.xml.defaults
+%dir	%{sysconfdir}/gconf/gconf.xml.mandatory
 %{prefix}/bin/gconf-config
 %{prefix}/bin/gconf-config-1
 %{prefix}/bin/gconfd-1
